add_vast_op_interface(SymbolInterface)
add_vast_op_interface(AggregateTypeDefinitionInterface)
add_vast_attr_interface(TypeQualifiersInterfaces)
add_vast_type_interface(AliasTypeInterface)
add_vast_type_interface(DefaultDataLayoutTypeInterface)
add_vast_type_interface(ElementTypeInterface)

add_subdirectory(AST)
add_subdirectory(Analyses)
add_subdirectory(CFG)
